--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 MONGODB_URI = "mongodb+srv://greenkart:greenkart123@cluster0.t2xgmn9.mongodb.net"
+
+JWT_SECRET = "secret#text"
+
+NODE_ENV = "development"
