--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ MONGODB_URI = "mongodb+srv://greenkart:greenkart123@cluster0.t2xgmn9.mongodb.net
 JWT_SECRET = "secret#text"
 
 NODE_ENV = "development"
+
+#Admin Credentials
+SELLER_EMAIL = "seller@example.com"
+SELLER_PASSWORD = "seller123"
