cloudinary & multer added

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,8 @@ NODE_ENV = "development"
 #Admin Credentials
 SELLER_EMAIL = "seller@example.com"
 SELLER_PASSWORD = "seller123"
+
+#Cloudinary
+CLOUDINARY_CLOUD_NAME = "dw8ulttu3"
+CLOUDINARY_API_KEY = "997721689728399"
+CLOUDINARY_API_SECRET = "2pS3U0qxUEegA5sUcnjd_7gFrJk"
